--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -2,26 +2,34 @@
 <head>
   <title> Israel Ali </title>
 </head>
-<body>
   <!-- Css lins -->
   <link rel="stylesheet" href="/resources/Homepage.css">
   <body>
       <div class="wrapper"> <!-- for reasons -->
+        <!-- The right side of the webpage -->
           <div class="main-content">
               <!-- your main stuff here -->
               <h1>  Israel Ali </h1>
           <section class=FlexBox>
-              <h3 class="button"> About </h3>
-              <h3 class="button"> Contact </h3>
+              <h3 class="button"><a href="AboutMe.html">About Me</a></a></h3>
+              <h3 class="button"><a href="Contact.html">Contact</a></a></h3>
             </section>
-            <!-- Link to my FaceBook with the logo -->
+
+            <!-- This is the footers -->
             <section class="FlexBox">
               <div class="Social_Media">
-<a  href="https://www.facebook.com/israel.ali.796"><img src="//login.create.net/images/icons/user/facebook_40x40.png" border=0></a>
-<a   href="https://www.instagram.com/its_real396/?hl=en"><img src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram40x40.png" border=0></a>
-</div>
+                <!-- This is the footers -->
+                  <!-- Link to my FaceBook with the logo -->
+                    <a  href="https://www.facebook.com/israel.ali.796"><img id="facebook" src="/resources/Logos/facebook.png"></a>
+                      <a  href="https://www.instagram.com/its_real396/?hl=en"><img id="instagram" src="/resources/Logos/insta.png"></a>
+                      <a  href="https://www.linkedin.com/in/israel-a-960a2b11a/"><img id="linkedin" src="/resources/Logos/linkedin.png"></a>
+                      <a  href="https://twitter.com/aji_bounce79"><img id="twitter" src="/resources/Logos/twitter.png"></a>
+                      <!-- <a  href="https://mail.google.com/mail/u/0/#inbox"><img id="email" src="/resources/Logos/email.png"></a> -->
+
+
 </section>
           </div>
+          <!-- The left side of the Webpage -->
           <div class="PicOfMe">
               <!-- your not so main stuff here -->
               <img id="Israel" src="/resources/picizzy.jpg">
