--- a/templates/AboutMe.html
+++ b/templates/AboutMe.html
@@ -1,11 +1,79 @@
 <html>
 <head>
   <title> About Me </title>
+  <link rel="stylesheet" href="/resources/css/AboutMe.css">
 </head>
-  <!-- Css lins -->
-  <link rel="stylesheet" href="/resources/AboutMe.css">
+<!-- This is  for the whole section for top part of the page with the skyline -->
   <body>
-    <h3 id="name"> Israel Ali </h3>
-    
+    <section  id="top-background" class"content">
+      <div class="navbar">
+        <img id="smallphoto" src="/resources/photos/Headshot.jpg">
+        <p class="pagelinks" id="blank"> He </p> <!-- this is just here to fill space it does nothing and will not be seen -->
+
+        <a class="pagelinks" href="Contact.html">Contact</a>
+          <a class="pagelinks" href="Projects.html">Projects</a>
+            <a class="pagelinks" href="/">Home</a> <!-- The slach links it back to the HomePage -->
+  </div>
+<div class="navbar">
+<h3 class="Into-text"> I'm Israel  <h3>
+<h3 class="Into-text"> Brooklyn Native and Developer <h3>
+</div>
+<!-- this is the end of that section -->
+
+<!-- This all code for the next section about me and life -->
+    </section>
+    <section class="content">
+      <div class="image">
+      <img id="Headshot" src="/resources/photos/Headshot.jpg">
+      </div>
+    </section>
+
+<section class="text-content">
+  <div class= "main-content">
+    <h1  id="Hello"class="Big-text"> Hello! </h3>
+    </div>
+</section>
+<section class="text-content">
+ <div class="main-content">
+    <p class="text">  I am a  freshman at Suny University At Albany
+with a  major in Computer Science.<br>I was raised in Brooklyn New York and I  have a newly found  passion for <br>  both web and mobile design.  I also  love anything that has to do with  either investing or animation.
+</div>
+</section>
+<section class="text-content">
+  <div class= "main-content">
+    <h1 class="Big-Text"> What I can do  </h3>
+    </div>
+</section>
+
+<section class="text-content">
+ <div class="main-content">
+    <p class="text"> I can use programming languages such as  HTML, CSS, JavaScript, and Python along with tools such as Git and Google AppEngine to design,
+      build and deploy websites.I am also currently learning how to build simple iPhone apps using ios swift and Xcode. </p>
+        <a class="project-link" class="text" href="Projects.html">Click here to view some my projects </a>
+</div>
+</section>
+
+<section class="text-content">
+  <div class= "main-content">
+    <h1 id="Resume-center" class="Big-Text"> Resume and Other Accomplishments </h3>
+    </div>
+</section>
+
+<section class="text-content">
+ <div class="main-content">
+    <p class="text"> <b> Participant|Google Computer Science Summer Institute July 2017 - August 2017 </b> <br>
+      One of 30 students selected from 500+ applicants to attend a three week coding intensive coding summer program hosted at Google’s New York office. <br>
+      <b>   Intern | Morgan Stanley                  November 2016 - April 2017  </b> <br>
+      Used software such as Microsoft Excel to analyze and retrieve data such as monthly expenses  for corporate cost centers
+  .</br>
+
+  <b> YDCT Harrisburg Rotary Club                                                          September 2015 - May-2016 </b> <br>
+ In a group 30  students  raised a $5,000 grant to that was given to a local non-profit called the Joshua Group that was used to fund its 2016 summer reading academy.
+
+<a class="project-link" class="text" href="Projects.html">Click here to view a full copy of my resueme.  </a>
+
+
+</div>
+</section>
 
 </body>
