--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -3,7 +3,21 @@
   <title> Contact Me </title>
 </head>
   <!-- Css lins -->
-  <link rel="stylesheet" href="/resources/Contact.css">
+  <link rel="stylesheet" href="/resources/css/Contact.css">
   <body>
-
+    <section  id="top-background" class"content">
+      <div class="navbar">
+        <img id="smallphoto" src="/resources/photos/Headshot.jpg">
+        <p class="pagelinks" id="blank"> He </p> <!-- this is just here to fill space it does nothing and will not be seen -->
+        <a class="pagelinks" href="Contact.html">Contact</a>
+          <a class="pagelinks" href="AboutMe.html">About Me</a>
+            <a class="pagelinks" href="/">Home</a> <!-- The slach links it back to the HomePage -->
+    </div>
+    <div class="navbar">
+    <h3 class="Into-text"> Contact Me   <h3>
+    </div>
+    <!-- this is the end of that section -->
+    <!-- This all code for the next section about me and life -->
+    </section>
+    
 </body>
