--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -3,7 +3,7 @@
   <title> Israel Ali </title>
 </head>
   <!-- Css lins -->
-  <link rel="stylesheet" href="/resources/Homepage.css">
+  <link rel="stylesheet" href="/resources/css/Homepage.css">
   <body>
       <div class="wrapper"> <!-- for reasons -->
         <!-- The right side of the webpage -->
@@ -14,6 +14,7 @@
               <h3 class="button"><a href="AboutMe.html">About Me</a></a></h3>
               <h3 class="button"><a href="Contact.html">Contact</a></a></h3>
             </section>
+            <h3 id="project-link" class="button"><a href="Projects.html">Projects</a></a></h3>
 
             <!-- This is the footers -->
             <section class="FlexBox">
@@ -32,7 +33,7 @@
           <!-- The left side of the Webpage -->
           <div class="PicOfMe">
               <!-- your not so main stuff here -->
-              <img id="Israel" src="/resources/picizzy.jpg">
+              <img id="Israel" src="/resources/photos/picizzy.jpg">
           </div>
       </div>
   </body>
