--- a/templates/AboutMe.html
+++ b/templates/AboutMe.html
@@ -30,7 +30,7 @@
 
 <section class="text-content">
   <div class= "main-content">
-    <h1  id="Hello"class="Big-text"> Hello! </h3>
+    <h1  id="Hello"class="Big-text"> Hello </h3>
     </div>
 </section>
 <section class="text-content">
