--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -4,7 +4,9 @@
 </head>
   <!-- Css lins -->
   <link rel="stylesheet" href="/resources/css/Contact.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <body>
+
     <section  id="top-background" class"content">
       <div class="navbar">
         <img id="smallphoto" src="/resources/photos/Headshot.jpg">
@@ -19,5 +21,69 @@
     <!-- this is the end of that section -->
     <!-- This all code for the next section about me and life -->
     </section>
-    
+
+    <p class="text">
+  If you need you contact me use this link to
+    <a href="mailto:israelali1424@gmail.com" target="_top">Send me an email</a>
+    </p>
+
+
+    <section class="FlexBox">
+      <div class="Social_Media">
+        <!-- This is the footers -->
+          <!-- Link to my FaceBook with the logo -->
+            <a  href="https://www.facebook.com/israel.ali.796"><img id="facebook" src="/resources/Logos/facebook.png"></a>
+              <a  href="https://www.instagram.com/its_real396/?hl=en"><img id="instagram" src="/resources/Logos/insta.png"></a>
+              <a  href="https://www.linkedin.com/in/israel-a-960a2b11a/"><img id="linkedin" src="/resources/Logos/linkedin.png"></a>
+              <a  href="https://twitter.com/aji_bounce79"><img id="twitter" src="/resources/Logos/twitter.png"></a>
+              <!-- <a  href="https://mail.google.com/mail/u/0/#inbox"><img id="email" src="/resources/Logos/email.png"></a> -->
+
+
+</section>
+  </div>
+
+
+<!-- <section>
+    <div class="container">
+    <div class="col-md-5">
+        <div class="form-area">
+            <form role="form">
+            <br style="clear:both">
+                        <h3 style="margin-bottom: 25px; text-align: center;">Contact Form</h3>
+        				<div class="form-group">
+    						<input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+    					</div>
+    					<div class="form-group">
+
+    						<input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+    					</div>
+    					<div class="form-group">
+
+    						<input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
+    					</div>
+    					<div class="form-group">
+
+    						<input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
+    					</div>
+                        <div class="form-group">
+                        <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+                            <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>
+                        </div>
+
+            <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
+            </form>
+        </div>
+    </div>
+    </div>
+  </section> -->
+
+<!-- The Js link -->
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src ="/resources/js/Contact.js"></script>
+
 </body>
