--- a/templates/AboutMe.html
+++ b/templates/AboutMe.html
@@ -61,16 +61,22 @@ with a  major in Computer Science.<br>I was raised in Brooklyn New York and I  h
 
 <section class="text-content">
  <div class="main-content">
-    <p class="text"> <b> Participant|Google Computer Science Summer Institute July 2017 - August 2017 </b> <br>
-      One of 30 students selected from 500+ applicants to attend a three week coding intensive coding summer program hosted at Google’s New York office. <br>
+    <p class="text"> <b> Participant | Google Computer Science Summer Institute July 2017 - August 2017 </b> <br>
+      One of 30 students selected from 500+ applicants to attend a three-week intensive coding summer program hosted at Google’s New York office. <br> </p>
+
+<p class="text">
       <b>   Intern | Morgan Stanley                  November 2016 - April 2017  </b> <br>
-      Used software such as Microsoft Excel to analyze and retrieve data such as monthly expenses  for corporate cost centers
-  .</br>
+      Used software such as Microsoft Excel to analyze and retrieve data such as monthly expenses for corporate cost centers. </p>
+  </br>
+<p class="text">
+  <b> Participant | YDCT Harrisburg Rotary Club                                                   September 2015 - May-2016 </b> <br>
+ In a group of 30 students raised a $5,000 grant  that was given to a local non-profit called the Joshua Group that was used to fund its 2016 summer reading academy. </p>
 
-  <b> YDCT Harrisburg Rotary Club                                                          September 2015 - May-2016 </b> <br>
- In a group 30  students  raised a $5,000 grant to that was given to a local non-profit called the Joshua Group that was used to fund its 2016 summer reading academy.
 
-<a class="project-link" class="text" href="Projects.html">Click here to view a full copy of my resueme.  </a>
+
+
+<a class="project-link" class="text" href="/resources/pdf/resume.pdf">Click here to view a full copy of my resueme.  </a>
+
 
 
 </div>
