--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -23,8 +23,8 @@
     </section>
 
     <p class="text">
-  If you need you contact me use this link to
-    <a href="mailto:israelali1424@gmail.com" target="_top">Send me an email</a>
+Please contact me and give me any feedback and or improvements I can make to this website. Use this link to
+    <a href="mailto:israelali1424@gmail.com" target="_top">Send me an email</a>.
     </p>
 
 
