--- a/templates/Projects.html
+++ b/templates/Projects.html
@@ -32,9 +32,9 @@
     <div>
 
     <p class="description"> Checkiversity was created in a team of 3 during <br>
-      Google CSSI. Checkiversity is a checklist generator for rising college <br>
-      freshman to help ease their transition into college by helping them <br>
-      organize their needs.Users can create, edit, save, and delete  their checklists.
+Google CSSI. Checkiversity is a checklist generator for rising college <br>
+freshman to help them ease their transition into college by helping them
+organize their needs.Users can create, edit, save, and delete their checklists.
  <p>
   <a class= "project-link" href="http://checkiversity.appspot.com/">Click here to  view Checkiversity.  </a>
     </div>
@@ -51,8 +51,8 @@
     <div>
 
     <p class="description"> This is my Personal Website. I created it as my <br>
-  first solo project.It just gives a small bio of me ,shows some <br>
-   projects I am working  on, and gives diffent ways  to contct me .
+  first solo project.It just gives a small bio of me, shows some <br>
+   projects I am working on and gives different ways to contact me.
     <!-- When you delopy the webstie add in the correcy link -->
     <div>
   <a class= "project-link" href="http://checkiversity.appspot.com/">Click here to  view my Personal Website  </a>
@@ -72,8 +72,8 @@
     <div>
 
     <p class="description"> I am still working on this project, but it is a dictionary <br>
-      website. It will be able to define any work you can think of. <br>
-      I have finshed the back end of the website but I need to create the front end. <br>
+      website. This website will be able to define any work you can think of. <br>
+      I have finished the back end of the website but I need to create the front end. <br>
  <p>
 </section>
 
