--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -11,7 +11,7 @@
       <div class="navbar">
         <img id="smallphoto" src="/resources/photos/Headshot.jpg">
         <p class="pagelinks" id="blank"> He </p> <!-- this is just here to fill space it does nothing and will not be seen -->
-        <a class="pagelinks" href="Contact.html">Contact</a>
+        <a class="pagelinks" href="Projects.html">Projects</a>
           <a class="pagelinks" href="AboutMe.html">About Me</a>
             <a class="pagelinks" href="/">Home</a> <!-- The slach links it back to the HomePage -->
     </div>
