--- a/templates/Projects.html
+++ b/templates/Projects.html
@@ -55,7 +55,7 @@ organize their needs.Users can create, edit, save, and delete their checklists.
    projects I am working on and gives different ways to contact me.
     <!-- When you delopy the webstie add in the correcy link -->
     <div>
-  <a class= "project-link" href="http://checkiversity.appspot.com/">Click here to  view my Personal Website  </a>
+  <a class= "project-link" href="https://israel-ali.appspot.com/">Click here to  view my Personal Website  </a>
     </div>
 </section>
 
