--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -29,15 +29,16 @@ Please contact me and give me any feedback and or improvements I can make to thi
 
 
     <section class="FlexBox">
-      <div class="Social_Media">
+      <div class="Media">
         <!-- This is the footers -->
-          <!-- Link to my FaceBook with the logo -->
-            <a  href="https://www.facebook.com/israel.ali.796"><img id="facebook" src="/resources/Logos/facebook.png"></a>
-              <a  href="https://www.instagram.com/its_real396/?hl=en"><img id="instagram" src="/resources/Logos/insta.png"></a>
-              <a  href="https://www.linkedin.com/in/israel-a-960a2b11a/"><img id="linkedin" src="/resources/Logos/linkedin.png"></a>
-              <a  href="https://twitter.com/aji_bounce79"><img id="twitter" src="/resources/Logos/twitter.png"></a>
-              <!-- <a  href="https://mail.google.com/mail/u/0/#inbox"><img id="email" src="/resources/Logos/email.png"></a> -->
+          <!-- Link to my FaceBook with the logo and were download at 65 -->
+          <div class=Social_Media>  <a  href="https://www.facebook.com/israel.ali.796"><img id="facebook" src="/resources/Logos/facebook.png"></a> </div>
+            <div class=Social_Media>  <a  href="https://www.instagram.com/its_real396/?hl=en"><img id="instagram" src="/resources/Logos/insta.png"></a> </div>
+            <div class=Social_Media>  <a  href="https://www.linkedin.com/in/israel-a-960a2b11a/"><img id="linkedin" src="/resources/Logos/linkedin.png"></a> </div>
+            <div class=Social_Media>  <a  href="https://twitter.com/aji_bounce79"><img id="twitter" src="/resources/Logos/twitter.png"></a> </div>
 
+              <!-- <a  href="https://mail.google.com/mail/u/0/#inbox"><img id="email" src="/resources/Logos/email.png"></a> -->
+</div>
 
 </section>
   </div>
