--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -9,24 +9,27 @@
         <!-- The right side of the webpage -->
           <div class="main-content">
               <!-- your main stuff here -->
-              <h1>  Israel Ali </h1>
+              <h1 id="name">  Israel Ali </h1>
           <section class=FlexBox>
               <h3 class="button"><a href="AboutMe.html">About Me</a></a></h3>
               <h3 class="button"><a href="Contact.html">Contact</a></a></h3>
             </section>
             <h3 id="project-link" class="button"><a href="Projects.html">Projects</a></a></h3>
 
+
+
             <!-- This is the footers -->
             <section class="FlexBox">
-              <div class="Social_Media">
+              <div class="Media">
                 <!-- This is the footers -->
-                  <!-- Link to my FaceBook with the logo -->
-                    <a  href="https://www.facebook.com/israel.ali.796"><img id="facebook" src="/resources/Logos/facebook.png"></a>
-                      <a  href="https://www.instagram.com/its_real396/?hl=en"><img id="instagram" src="/resources/Logos/insta.png"></a>
-                      <a  href="https://www.linkedin.com/in/israel-a-960a2b11a/"><img id="linkedin" src="/resources/Logos/linkedin.png"></a>
-                      <a  href="https://twitter.com/aji_bounce79"><img id="twitter" src="/resources/Logos/twitter.png"></a>
-                      <!-- <a  href="https://mail.google.com/mail/u/0/#inbox"><img id="email" src="/resources/Logos/email.png"></a> -->
+                  <!-- Link to my FaceBook with the logo and were download at 65 -->
+                  <div class=Social_Media>  <a  href="https://www.facebook.com/israel.ali.796"><img id="facebook" src="/resources/Logos/facebook.png"></a> </div>
+                    <div class=Social_Media>  <a  href="https://www.instagram.com/its_real396/?hl=en"><img id="instagram" src="/resources/Logos/insta.png"></a> </div>
+                    <div class=Social_Media>  <a  href="https://www.linkedin.com/in/israel-a-960a2b11a/"><img id="linkedin" src="/resources/Logos/linkedin.png"></a> </div>
+                    <div class=Social_Media>  <a  href="https://twitter.com/aji_bounce79"><img id="twitter" src="/resources/Logos/twitter.png"></a> </div>
 
+                      <!-- <a  href="https://mail.google.com/mail/u/0/#inbox"><img id="email" src="/resources/Logos/email.png"></a> -->
+ </div>
 
 </section>
           </div>
@@ -36,6 +39,7 @@
               <img id="Israel" src="/resources/photos/picizzy.jpg">
           </div>
       </div>
+
   </body>
 
 
